<resources>
    <string name="app_name">Book Donation</string>
    <string name="login_register">Login/Register</string>
    <string name="login_to_Get"><![CDATA[Login To Get Personalized Experience & Quick Check Out]]></string>
    <string name="or_login_using">Or Sign in with</string>
    <string name="login_as_user">Login As User</string>
    <string name="or">or</string>
    <string name="login_as_organisation">Login As Organisation</string>
    <string name="welcome_to_bukish">Welcome To Book Donation</string>
    <string name="we_are_glad">We are glad you are here</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_mobile_number">Please enter your email address to\nreceive a verification code.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verification_code">Verification code</string>
    <string name="we_sent_otp">We sent OTP code to your registered email id</string>
    <string name="send_again">Resend Again</string>
    <string name="get_otp">Get OTP</string>
    <string name="continue1">Continue</string>
    <string name="submit">Submit</string>
    <string name="create_your_number">Create New Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone No</string>
    <string name="email">Email</string>
    <string name="business_organisation">Business Organisation</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_account">My Account</string>
    <string name="robert_william">Robert Willium</string>
    <string name="welcome">Welcome</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="exit">Exit Confirmation!</string>
    <string name="msg_exit">Are you sure want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="how_can_i_help">How Can I Help You?</string>
    <string name="dorner_shelf">Donor Shelf</string>
    <string name="demo_small_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</string>
    <string name="demo_too_small_text">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="donor_shelf_section_text">Browse donated items and claim items you need</string>
    <string name="help_request_section_text">Go through the requests and help the needy</string>
    <string name="donate_section_text">Upload item you wish to donate</string>
    <string name="ask_help_section_text">Post your education related requirements here</string>
    <string name="help_request">Help Request</string>
    <string name="donate_now">Donate Now</string>
    <string name="ask_help">Ask Help</string>
    <string name="find_books_electronics">Find books, electronics and more...</string>
    <string name="event">Event</string>
    <string name="view_all">View All</string>
    <string name="books">Books</string>
    <string name="event_name">Event Name</string>
    <string name="demo_date_time">Date : 05/08/2021, 12:00Am</string>
    <string name="find_books">Find Books...</string>
    <string name="school_books">School Books</string>
    <string name="maths">Maths</string>
    <string name="engineering_books">Engineering Books</string>
    <string name="bio_books">Bio Books</string>
    <string name="number_theory">Number Theory</string>
    <string name="demo_date">1 June</string>
    <string name="demo_address">Mansarovar jaipur</string>
    <string name="description">Description</string>
    <string name="description1">Description :</string>
    <string name="details">Details</string>
    <string name="publication_date">Publication Date</string>
    <string name="publication_date1">25 June</string>
    <string name="language">Language</string>
    <string name="language1">English</string>
    <string name="author">Author</string>
    <string name="author1">CP Sharma</string>
    <string name="binding">Binding</string>
    <string name="binding1">No</string>
    <string name="pages">Pages</string>
    <string name="pages1">120</string>
    <string name="location_jaipur">Location : Jaipur</string>
    <string name="demo_large_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="event_details">Event Details</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us 24/7</string>
    <string name="write_us">Write to Us</string>
    <string name="available_from">Available from 10:00AM to 9:00PM</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="donor_details">Donor Details</string>
    <string name="review">Review</string>
    <string name="mobile_number">Mobile No</string>
    <string name="upload_image">Upload Image</string>
    <string name="number_of_items">No. of item donates</string>
    <string name="number_of_items1">No. of item donates :</string>
    <string name="condition">Condition</string>
    <string name="condition1">Condition :</string>
    <string name="image">Image :</string>
    <string name="category">Category :</string>
    <string name="subcategory">Subcategory : </string>
    <string name="table">Table</string>
    <string name="furniture">Furniture</string>
    <string name="good">Good</string>
    <string name="your_review_submitted">Your review successfully submitted</string>
    <string name="chats">Chats</string>
    <string name="quick_filters">Quick Filters</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="important">Important</string>
    <string name="call_me">Call me</string>
    <string name="day_ago">2 days ago</string>
    <string name="enter_msg">message...</string>
    <string name="view_and_edit">View and edit profile</string>
    <string name="steps_left">3 steps left</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="privacy_logout">Privacy and logout</string>
    <string name="help_center_and_legal">Help center and legal terms</string>
    <string name="save">Save</string>
    <string name="basic_info">Basic Information</string>
    <string name="statics">Statistics</string>
    <string name="demo_number">36</string>
    <string name="mobile_number1">Mobile Number : 9595959595</string>
    <string name="reject">Reject</string>
    <string name="date">Date :</string>
    <string name="donate_person_details">Donate Person Details</string>
    <string name="name">Name :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="demo_contacts">9595959595</string>
    <string name="address1">Address :</string>
    <string name="mode_of_donate">Mode Of Donate :</string>
    <string name="wish_list">My Wishlist</string>
    <string name="claim">Claim</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="claim_person_details">Claim Persons List</string>
    <string name="name1">Name : Bhuvnesh Sharma</string>
    <string name="address2">"Address : Mansarovar, jaipur "</string>
    <string name="contact">Contacts : 9595959595</string>
    <string name="requested_person_details">Requested Persons Details</string>
    <string name="ask_help_person_details">Requested List</string>
    <string name="loading">Loading...</string>
    <string name="default_error">Something went wrong, please try again later.</string>
    <string name="oops">Oops!</string>
    <string name="select_image">Select Image</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signin">Signin</string>
    <string name="select_your_option">Select your option</string>
    <string name="take_from_camera">Take from camera</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="please_select_profile_image">Please select profile image</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_organisation">Please enter business organisation</string>
    <string name="please_enter_valid_pincode">Please enter valid pincode</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="base_image_url">https://androidhiker.com/bhukish/</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_image">Please select an image</string>
    <string name="please_select_sub_category">Please select sub category</string>
    <string name="please_enter_condition">Please enter item condition</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="email1">Email :</string>
    <string name="item_name">Item name</string>
    <string name="please_enter_item_name">Please enter item name</string>
    <string name="claim_accept">Claim\nAccept</string>
    <string name="claim_accepted">Claim\nAccepted</string>
    <string name="notification">Notifications</string>
    <string name="requested_at">Requested At : </string>
    <string name="contact1">Contacts :</string>
    <string name="search_category">Search category...</string>
    <string name="search_sub_category">Search sub category...</string>
    <string name="search">Search...</string>
    <string name="are_you_sure_want_to">Are you sure want to delete this message?</string>
    <string name="server_data_not_found">Server data not found</string>
    <string name="photo">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="title">Title</string>
    <string name="please_enter_publication_date">Please enter publication date</string>
    <string name="please_enter_language">Please enter book\'s language</string>
    <string name="please_enter_author">Please enter author of book</string>
    <string name="please_enter_pages">Please enter number of pages</string>
    <string name="please_enter_binding_type">Please enter binding type</string>
    <string name="book_title">Book Title</string>
    <string name="isbn_no">ISBN No.</string>
    <string name="grade_course">Grade level/Course</string>
    <string name="board_university">Board/University</string>
    <string name="board_university1">Board/University :</string>
    <string name="please_enter_book_title">Please enter book Title</string>
    <string name="please_enter_book_isbn_no">Please enter book\'s ISBN number</string>
    <string name="please_select_book_category">Please select book\'s category</string>
    <string name="please_enter_grade_course">Please enter grade or course</string>
    <string name="location_alert">Location Alert!</string>
    <string name="enter_your_pincode">Enter your pincode here</string>
</resources>