<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/a"
        android:gravity="center"
        android:background="@color/app_color"
        android:src="@drawable/ic_cross"
        android:padding="@dimen/dp_15"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/location_alert"
        android:textColor="@color/app_color"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/edtPincode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/text_dialog"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/rounded_corner_gray_border"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/enter_your_pincode"
        android:inputType="number"
        android:maxLength="6"
        android:paddingHorizontal="@dimen/dp_20"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPincode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_appcolor_20"
        android:gravity="center_vertical|center_horizontal"
        android:paddingHorizontal="@dimen/dp_40"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>