<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_corner_appcolor"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:layout_marginVertical="@dimen/dp_20"
                android:id="@+id/tv_title"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_width="match_parent"
                android:text="@string/are_you_sure_want_to"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_marginBottom="@dimen/dp_10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_no"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_35"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:background="@drawable/round_no"/>

                <Button
                    android:id="@+id/bt_yes"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginStart="@dimen/dp_10"
                    android:includeFontPadding="false"
                    android:background="@drawable/round_yes"
                    android:text="@string/yes"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"/>

</LinearLayout>