<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgOne"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            app:srcCompat="@drawable/ic_pink_circle"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view1"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="@+id/imgOne"
            app:layout_constraintEnd_toEndOf="@+id/imgOne"
            app:layout_constraintTop_toTopOf="@+id/imgOne"
            app:layout_constraintBottom_toBottomOf="@+id/imgOne"/>

        <TextView
            android:id="@+id/tctDonorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_details"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@+id/imgOne"
            app:layout_constraintEnd_toEndOf="@+id/imgOne"
            app:layout_constraintTop_toBottomOf="@+id/imgOne"/>

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/gray_3"
            app:layout_constraintStart_toEndOf="@+id/imgOne"
            app:layout_constraintEnd_toStartOf="@+id/imgSecond"
            app:layout_constraintTop_toTopOf="@+id/imgOne"
            app:layout_constraintBottom_toBottomOf="@+id/imgOne"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSecond"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            app:srcCompat="@drawable/ic_empty_black_circle"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="@+id/imgSecond"
            app:layout_constraintEnd_toEndOf="@+id/imgSecond"
            app:layout_constraintTop_toTopOf="@+id/imgSecond"
            app:layout_constraintBottom_toBottomOf="@+id/imgSecond"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@+id/imgSecond"
            app:layout_constraintEnd_toEndOf="@+id/imgSecond"
            app:layout_constraintTop_toBottomOf="@+id/imgSecond"/>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/gray_3"
            app:layout_constraintStart_toEndOf="@+id/imgSecond"
            app:layout_constraintEnd_toStartOf="@+id/imgThird"
            app:layout_constraintTop_toTopOf="@+id/imgSecond"
            app:layout_constraintBottom_toBottomOf="@+id/imgOne"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgThird"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            app:srcCompat="@drawable/ic_empty_black_circle"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_50"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="@+id/imgThird"
            app:layout_constraintEnd_toEndOf="@+id/imgThird"
            app:layout_constraintTop_toTopOf="@+id/imgThird"
            app:layout_constraintBottom_toBottomOf="@+id/imgThird"/>

        <TextView
            android:id="@+id/txtReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@+id/imgThird"
            app:layout_constraintEnd_toEndOf="@+id/imgThird"
            app:layout_constraintTop_toBottomOf="@+id/imgThird"/>

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/user_name"
            android:textColor="@color/app_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_14"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_30"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtReview"/>

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/mobile_number"
            android:textColor="@color/app_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_14"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/email"
            android:textColor="@color/app_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtMobile"/>

        <Spinner
            android:id="@+id/spinState"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:popupBackground="@color/white"
            android:nextFocusDown="@id/spinCity"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"/>

        <ImageView
            android:id="@+id/imgArrowState"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:src="@drawable/ic_donw_arrow"
            android:adjustViewBounds="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/spinState"
            app:layout_constraintTop_toTopOf="@+id/spinState"
            app:layout_constraintBottom_toBottomOf="@+id/spinState"
            app:tint="@color/app_color" />

        <Spinner
            android:id="@+id/spinCity"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:popupBackground="@color/white"
            android:nextFocusDown="@id/edtAddress"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinState"/>

        <ImageView
            android:id="@+id/imgArrowCity"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:src="@drawable/ic_donw_arrow"
            android:adjustViewBounds="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/spinCity"
            app:layout_constraintTop_toTopOf="@+id/spinCity"
            app:layout_constraintBottom_toBottomOf="@+id/spinCity"
            app:tint="@color/app_color" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/address"
            android:textColor="@color/app_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinCity"/>

        <EditText
            android:id="@+id/edtPincode"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/pincode"
            android:textColor="@color/app_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:maxLength="6"
            android:inputType="number"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corner_gray_border"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:background="@drawable/rounded_corner_appcolor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPincode"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>